# fastapi-standard-template

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  main.py
app/core/: config.py  error_code.py  exception.py  exception_handler.py  log_context.py  logging.py  middleware.py  response.py
